update(progress-container.html): selectors renamed update(progress-container.css): selectors renamed update(progress-container.js): add reusable structure

--- a/progress-container.html
+++ b/progress-container.html
@@ -19,8 +19,8 @@
               a 21 21 0 0 1 0 -42"
           />
           <path
-            id="progress-circle"
-            class="loader-progress"
+            id="progress-loader"
+            class="progress-loader"
             stroke-dasharray="0, 132"
             d="M24 3
               a 21 21 0 0 1 0 42
