--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="progress-container.css" />
-    <script defer src="progress-container.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
     <title>Progress block</title>
   </head>
   <body>
